Agent - fanuc iSeries/Fwlib/150/FWLIB32.BAS


' Start NC display (2)
Declare Function cnc_startnccmd2% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' Stop NC display
Declare Function cnc_stopnccmd% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' Get NC display mode
Declare Function cnc_getdspmode% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )


'-----
' PMC
'-----

' read message from PMC to MMC
Declare Function pmc_rdmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, a%, b% )

' write message from MMC to PMC
Declare Function pmc_wrmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b% )

' read message from PMC to MMC(conditional)
Declare Function pmc_crdmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, a%, b% )

' write message from MMC to PMC(conditional)
Declare Function pmc_cwrmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b% )

' read PMC data(area specified)
Declare Function pmc_rdpmcrng% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d&, ByVal e&, Odb As Any )

' write PMC data(area specified)
Declare Function pmc_wrpmcrng% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, Idb As Any )

' read data from extended backup memory
Declare Function pmc_rdkpm% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b$, ByVal c& )

' write data to extended backup memory
Declare Function pmc_wrkpm% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, ByVal b$, ByVal c& )

' read maximum size of extended backup memory
Declare Function pmc_kpmsiz% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read informations of PMC data
Declare Function pmc_rdpmcinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As ODBPMCINF )

' read PMC parameter data table contorol data
Declare Function pmc_rdcntldata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, Odb As IODBPMCCNTL )

' write PMC parameter data table contorol data
Declare Function pmc_wrcntldata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBPMCCNTL )

' read PMC parameter data table contorol data group number
Declare Function pmc_rdcntlgrp% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' write PMC parameter data table contorol data group number
Declare Function pmc_wrcntlgrp% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read PMC alarm message */
Declare Function pmc_rdalmmsg% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, c%, Odb As Any)

' get detail error for pmc
Declare Function pmc_getdtailerr% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBPMCERR )

' read PMC memory data
Declare Function pmc_rdpmcmem% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b&, ByVal c&, Odb As Any )

' write PMC memory data
Declare Function pmc_wrpmcmem% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b&, ByVal c&, Idb As Any )


'--------------------------
' HSSB multiple connection
'--------------------------

' read number of node
Declare Function cnc_rdnodenum% Lib "fwlib32.dll" (a&)

' read node informations
Declare Function cnc_rdnodeinfo% Lib "fwlib32.dll" (ByVal a&, Odb As ODBNODE)

' set default node number
Declare Function cnc_setdefnode% Lib "fwlib32.dll" (ByVal a&)

' allocate library handle 2
Declare Function cnc_allclibhndl2% Lib "fwlib32.dll" (ByVal a&, FlibHndl%)

